[tool.poetry]
name = "weather-project"
version = "0.1.0"
description = ""
authors = ["asafle43 <asafle43@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.36.0"
requests = "^2.32.3"
datetime = "^5.5"
pandas = "^2.2.2"
pytz = "^2024.1"
timezonefinder = "^6.5.2"
ipython = "^8.25.0"
argparse = "^1.4.0"
geocoder = "^1.38.1"
geopy = "^2.4.1"
creds = "^1.0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
